<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subject"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/intro"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/delete_task_imagebutton"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_end_color"
            android:src="@drawable/delete_task_icon" />
    </LinearLayout>
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:textSize="20dp"
        android:textStyle="italic"

        />


    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/darker_gray"
        android:text="@string/time_default" />

</LinearLayout>


