<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settingbg"
    tools:context=".AboutFragment">

    <ImageView
        android:id="@+id/logo_on_about_fragment"
        android:layout_width="165dp"
        android:layout_height="134dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="147dp"
        android:layout_height="96dp"
        android:layout_marginBottom="4dp"
        android:lineSpacingExtra="20sp"
        android:text="@string/title_activity_menu"
        android:textColor="@color/white"
        android:textSize="90dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="224dp"
        android:layout_height="39dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/getItDone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="228dp"
        android:layout_height="106dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="2.5sp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/about_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginBottom="116dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        android:text="@string/chores"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>